--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
 
-@import "tailwindcss" source("../src");
+@import "tailwindcss" ;
 @import "tw-animate-css";
-@source "../node_modules/@shadcn/ui/";
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
